syntax = "proto3";

package meshmon;

service MeshMonService {
    // Bidirectional streaming for mesh updates
    rpc StreamUpdates(stream ProtocolData) returns (stream ProtocolData);

}

message ProtocolData {
    oneof message_type {
        StoreUpdate store_update = 1;
        ConnectionInit connection_init = 3;
        Error error = 5;
        ConnectionAck connection_ack = 6;
    }
}

message StoreUpdate {
    string node_id = 1;
    string network_id = 2;  // Network/store identifier
    string data = 3;  // JSON serialized StoreData
}


message ConnectionInit {
    string node_id = 1;
    string network_id = 2;  // Network this connection is for
    string version = 3;
}

message ConnectionAck {
    string message = 1;
}

message Error {
    string code = 1;
    string message = 2;
    string details = 3;
}
